2005-11-25 Tim Perdue <tim@gforgegroup.com>

        * added quick-jump navigation system
        * added back in the quick-browse for tracker, which was removed for power query

2005-11-25 Daniel Perez <daniel@gforgegroup.com>
	Patchs applied : 
	* Fixed bug -> history parse runs out of memory
		http://gforge.org/tracker/?func=detail&aid=1585&group_id=6&atid=222
	* Fixed bug -> Hide skills search if sys_use_people is false
          https://gforge.org/tracker/?func=detail&aid=1586&group_id=6&atid=222	

2005-11-17  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* docs/docbook/docbook/installation_guide/installation_guide.xml:
	/etc/gforge/custom/index_std.php instead of www/index_std.php.
	Branch_4_5 instead of HEAD for checking out plugins.

2005-11-10 Daniel Perez <daniel@gforgegroup.com>
	Forum : Fixing bugs in display / emails
	Admin : added plugin manager -> to enable/disable in a site wide fashion the plugins

2005-11-10 Daniel Perez <daniel@gforgegroup.com>
	Fckeditor : changed configuration
				upgraded to 2.1.1 version to fix "spaces error" in Firefox
	
2005-11-10  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* docs/docbook/docbook/installation_guide/installation_guide.xml: 
	Checking out and updating from Branch_4_5.
	Customizing front page.
	FTI and project webs moved to optional features.
	Removed the fix for CVSTracker schema.
	Q&A about <Files> and <Location>, by David Morsberger.
	Added recommendation that reporting tables are initialized early.
	Instructions for patching when CVS version is 1.12.

2005-11-09 Daniel Perez <daniel@gforgegroup.com>
	Tracker (fixed bug)
		[#1630] -> http://gforge.org/tracker/?func=detail&atid=222&aid=1630&group_id=6	
		
2005-11-08 Daniel Perez <daniel@gforgegroup.com>
	Forums : 
		Added more common htmlentities to convertExtendedCharsForEmail method

2005-11-07 Daniel Perez <daniel@gforgegroup.com>
	Forums : 
		Attachmanager : Added more descriptive error messages
		Display : Fixed extra line break always displaying